@@ -9,11 +9,6 @@ Known Issues
   at some point. See `issue 385 <http://code.google.com/p/s3ql/issues/detail?id=385>`_
   for more details.
 
-* S3QL does not verify TLS/SSL server certificates and is thus
-  vulnerable to man-in-the-middle attacks. See `issue 267
-  <http://code.google.com/p/s3ql/issues/detail?id=267>`_ for more
-  details.
-
 * S3QL is rather slow when an application tries to write data in
   unreasonably small chunks. If a 1 MiB file is copied in chunks of 1
   KB, this will take more than 10 times as long as when it's copied
