@@ -25,13 +25,13 @@ class Backend(s3c.Backend):
     consistency.
     """
 
-    def __init__(self, storage_url, gs_key, gs_secret, use_ssl):
-        super().__init__(storage_url, gs_key, gs_secret, use_ssl)
+    def __init__(self, storage_url, gs_key, gs_secret, ssl_context):
+        super().__init__(storage_url, gs_key, gs_secret, ssl_context)
 
         self.namespace = 'http://doc.s3.amazonaws.com/2006-03-01'
 
     @staticmethod
-    def _parse_storage_url(storage_url, use_ssl):
+    def _parse_storage_url(storage_url, ssl_context):
         hit = re.match(r'^gs://([^/]+)(?:/(.*))?$', storage_url)
         if not hit:
             raise QuietError('Invalid storage URL')
@@ -39,7 +39,7 @@ class Backend(s3c.Backend):
         bucket_name = hit.group(1)
         hostname = '%s.commondatastorage.googleapis.com' % bucket_name
         prefix = hit.group(2) or ''
-        port = 443 if use_ssl else 80
+        port = 443 if ssl_context else 80
         return (hostname, port, bucket_name, prefix)        
 
     def __str__(self):
