@@ -1,3 +1,11 @@
+UNRELEASED, S3QL tip
+
+  * S3QL now uses SSL connections by default.
+
+  * S3QL now verifies server certificates when using SSL connections.
+
+  * There is a new --no-ssl option that now works for every backend.
+ 
 2013-05-12, S3QL 2.0-beta
 
   * S3QL now requires Python 3.3 or newer.
